# splinelib_cpp

./: CMakeLists.txt  README.md  package.xml
include/splinelib_cpp/: nurbs.hh
src/: nurbs.cc
