<?xml version="1.0"?>
<package format="2">
  <name>splinelib_cpp</name>
  <version>1.0.0</version>
  <description>Package for mathematical calculating of spline curves</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Suisei WADA</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
